--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
+# .env  # Commented out to allow committing .env for Firebase config
 
 # Firebase
 .firebase/
@@ -33,6 +33,7 @@ ui-debug.log*
 # Environment files
 # .env.*
 !.env.example
+!.env  # Allow committing .env for Firebase config
 
 # Coverage reports
 coverage/
