feat: add onboarding flow

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 
 # Environment
 VITE_APP_ENV=development # development, staging, production
+VITE_ONBOARDING_V1=false
