--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -36,6 +37,9 @@
     "firebase-tools": "^14.8.0",
     "globals": "^15.9.0",
     "jest": "^30.0.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "jest-environment-jsdom": "^30.0.0",
     "postcss": "^8.4.35",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
