--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-virtual": "^3.10.7",
     "date-fns": "^4.1.0",
     "esbuild": "^0.25.9",
     "firebase": "^12.2.1",
